--- a/mission/day7_타이핑_테스트_앱/index.html
+++ b/mission/day7_타이핑_테스트_앱/index.html
@@ -80,14 +80,6 @@
       // 초기화
       setupGame();
 
-      // 타이핑창 클릭 이벤트
-      typingArea.onclick = () => {
-        // 게임 시작
-        startGame();
-        // 제시된 문장 출력
-        sentence.innerText = `${targetSentence[targetIndex]}`;
-      };
-
       /**
        * 게임을 시작하기 위한 초기화 함수
        */
@@ -98,6 +90,15 @@
         typingArea.value = "";
         wpm.style = "display: none";
         cpm.style = "display: none";
+
+        // 타이핑창 클릭 이벤트
+        typingArea.onclick = () => {
+          // 게임 시작
+          typingArea.onclick = null;
+          startGame();
+          // 제시된 문장 출력
+          sentence.innerText = `${targetSentence[targetIndex]}`;
+        };
       }
 
       /**
@@ -121,6 +122,7 @@
        */
       function finishGame() {
         //타이머 종료
+        typingArea.disabled = true;
         if (timer) clearInterval(timer);
 
         // targetSentence index 초기화
@@ -141,7 +143,6 @@
         cpm.style = "display: block";
 
         sentence.innerText = "새 게임을 시작하려면 다시 시작을 클릭하세요.";
-        typingArea.disabled = true;
 
         // 다시 시작 버튼 생성
         const restartBtns = end.appendChild(document.createElement("button"));
