fix: 정확도 계산 시 입력값이 없을 경우 NaN 오류 수정
- 입력된 문자 수가 0일 때 ACCURACY(정확도)를 100%로 표시하도록 수정
- 분모가 0이 되어 발생하는 NaN 오류 방지

--- a/mission/day7_타이핑_테스트_앱/index.html
+++ b/mission/day7_타이핑_테스트_앱/index.html
@@ -211,6 +211,10 @@
           sumTotalInputCharacter =
             totalInputCharacter + typingArea.value.length;
         }
+        if (sumTotalInputCharacter === 0) {
+          accuracyTxt.innerText = 100;
+          return;
+        }
 
         // 정확도 계산
         accuracyTxt.innerText = Math.floor(
